<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="reportViewModel"
            type="com.example.samplecase.ui.report.ReportListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewReportList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:items="@{reportViewModel.reportList}"
            tools:listitem="@layout/recycler_item_report" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="25dp"
            android:src="@android:drawable/ic_menu_my_calendar"
            android:theme="@style/AppTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
